--- a/firebase.json
+++ b/firebase.json
@@ -10,9 +10,9 @@
     ]
   },
   "functions": {
-    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"]
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"],
+    "source": "functions"
   },
-
   "emulators": {
     "functions": {
       "port": 8000
