--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,15 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@babel/eslint-parser": "^7.16.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
+    "firebase-admin": "^10.0.0",
+    "firebase-functions": "^3.16.0",
     "stripe": "^8.191.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
